--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,32 @@
-<p>
-  login works!
-</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<div>   </div>
+
+
+<div class="jumbotron col-xs-12 col-md-6">
+  <div class="container text-center">
+      <div class="text-center">
+          <h3>Iniciar sesión</h3> 
+        </div>
+        <form>
+          <div class="input-group mb-3">   
+            <input type="text" class="form-control-plaintext" placeholder="Usuario">
+            <i class="glyphicon glyphicon-user" id="icono"></i>
+          </div>
+          <hr/>
+      
+          <div class="input-group mb-3">
+            <input type="password" class="form-control-plaintext" placeholder="Contraseña">
+            <i class="glyphicon glyphicon-lock" id="icono"></i>
+          </div>
+          <hr/>
+          <div class="text-center">
+            <button type="button" class="btn">Iniciar</button>
+          </div>
+          
+        </form> 
+      </div> 
+       
+  </div>
+  
