--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,30 +3,37 @@
 
 <div>   </div>
 
-
-<div class="jumbotron col-xs-12 col-md-6">
-  <div class="container text-center">
-      <div class="text-center">
-          <h3>Iniciar sesión</h3> 
-        </div>
-        <form>
-          <div class="input-group mb-3">   
-            <input type="text" class="form-control-plaintext" placeholder="Usuario">
-            <i class="glyphicon glyphicon-user" id="icono"></i>
-          </div>
-          <hr/>
-      
-          <div class="input-group mb-3">
-            <input type="password" class="form-control-plaintext" placeholder="Contraseña">
-            <i class="glyphicon glyphicon-lock" id="icono"></i>
-          </div>
-          <hr/>
-          <div class="text-center">
-            <button type="button" class="btn">Iniciar</button>
-          </div>
+<div class="container-fluid h-100 fondologin">
+    <div class="row justify-content-md-center">
+      <div class="jumbotron col-xs-10 col-md-6 col-lg-4 sombra">
+        <div class="text-center">
+              <h3 class="blanco titulo">Iniciar sesión</h3>         
+            <form class="login">
+              <div class="input-group mb-3">   
+                <input type="text" class="form-control-plaintext blanco" placeholder="Usuario">
+                <span class="input-group-addon spanIcon">
+                  <i class="glyphicon glyphicon-user iconlogin blanco" id="icono"></i>
+                </span>
+              
+              </div>
+    
           
-        </form> 
-      </div> 
+              <div class="input-group mb-3" style="margin-bottom: 4rem !important;">
+                <input type="password" class="form-control-plaintext blanco" placeholder="Contraseña">
+                <span class="input-group-addon spanIcon">
+                  <i class="glyphicon glyphicon-lock iconlogin blanco" id="icono"></i>
+                </span>
+              </div>
+    
+              <div class="text-center">
+                <button type="button" class="btn">Iniciar</button>
+              </div>
+              
+            </form> 
+        </div> 
+      </div>
+          
+    </div>
        
-  </div>
+</div>
   
