--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    
+font-family: 'Montserrat', sans-serif;
+}
+
+body{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.sombra{
+    box-shadow: 0 70px 20px -30px rgba(0, 0, 0, 0.77) !important;
+}
