--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
               </div>
     
               <div class="text-center">
-                <button type="button" class="btn">Iniciar</button>
+                <button type="button" class="btn" routerLink="/menu">Iniciar</button>
               </div>
               
             </form> 
@@ -34,6 +34,6 @@
       </div>
           
     </div>
-       
+
 </div>
   
