Menu integrado en componentes

--- a/src/app/menu/home/home.component.html
+++ b/src/app/menu/home/home.component.html
@@ -1,1 +1,16 @@
-soy el home
+<app-menu></app-menu>
+
+<div class="container pull-right">
+    Soy el home
+    porque no vas?
+    
+    <p>blabla bla</p>
+    
+    <p>blabla bla</p>
+    
+    <p>blabla bla</p>
+    <p>blabla bla</p>
+    <p>blabla bla</p>
+    <p>blabla bla</p>
+</div>
+
