--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
 </head> 
 <!------ Include the above in your HEAD tag ---------->
 
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="wrapper">
     	    <div class="side-bar">
