--- a/src/app/menu/home/home.component.html
+++ b/src/app/menu/home/home.component.html
@@ -1,16 +1,20 @@
-<app-menu></app-menu>
-
-<div class="container pull-right">
-    Soy el home
-    porque no vas?
+<div class="row" style="margin-left: 0px; margin-right: 0px;">
+        <app-menu></app-menu>    
+        
     
-    <p>blabla bla</p>
+    <div>
+        Soy el home
+        porque no vas?
+        
+        <p>blabla bla</p>
+        
+        <p>blabla bla</p>
+        
+        <p>blabla bla</p>
+        <p>blabla bla</p>
+        <p>blabla bla</p>
+        <p>blabla bla</p>
+    </div>
     
-    <p>blabla bla</p>
     
-    <p>blabla bla</p>
-    <p>blabla bla</p>
-    <p>blabla bla</p>
-    <p>blabla bla</p>
 </div>
-
