--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,10 +15,10 @@
                     </li>
                     <div class="menu">
                         <li>
-                            <a class="active" routerLink="/home">Home </a>
+                            <a routerLinkActive="active" routerLink="/home">Home <span class="glyphicon glyphicon-home pull-right"></span></a>
                         </li>
                         <li>
-                            <a routerLink="/prueba" >Prueba<span class="glyphicon glyphicon-heart pull-right"></span></a>
+                            <a routerLinkActive="active" routerLink="/prueba" >Prueba<span class="glyphicon glyphicon-heart pull-right"></span></a>
                         </li>
                         <li>
                             <a>Like it? <span class="glyphicon glyphicon-star pull-right"></span></a>
