--- a/src/app/prueba/prueba.component.html
+++ b/src/app/prueba/prueba.component.html
@@ -1,8 +1,11 @@
-<app-menu></app-menu>
+<div class="row" style="margin-left: 0px; margin-right: 0px;">
 
-<div class="container pull-right">
-  hola
-  <p>
-    prueba works!
-  </p>
+
+  <app-menu></app-menu>
+
+  
+    hola
+    <p>
+      prueba works!
+    </p>
 </div>
