Show in desktop one menu, in mobile another

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="wrapper">
+		<div class="wrapper" id="menuDesktop">
     	    <div class="side-bar">
                 <ul>
                     <li class="menu-head">
@@ -38,6 +38,9 @@
                     <router-outlet></router-outlet>
                 </div>
             </div>
-		</div>
+        </div>
+        <div id="menuMobile">
+            hola
+        </div>
 	</div>
 </div>
