--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -6,7 +6,9 @@
     overflow:hidden;
     display:inline-block;
 }
-.side-bar
+
+
+.side-bar 
 {
     background:rgba(49, 70, 91, 0.7);
     position:absolute;
@@ -14,10 +16,7 @@
     width:200px;
     color:#fff;
     transition: margin-left 0.5s;
-}
 
-.side-bar 
-{
     ul{
         list-style:none;
         padding:0px;
@@ -116,4 +115,40 @@
 #menuMobile{
     position: absolute;
     bottom: 0;
+    
+
+    #bottomNav{
+        background:rgba(49, 70, 91, 0.7);        
+
+        .col-xs-4{
+            border-left: 1px solid rgba(64, 89, 114, 0.7);;
+            padding-top: 8px;
+            padding-bottom: 8px;
+        }
+
+        a{
+             color:#fff;
+             
+
+            &.active{                
+                color:#f3a117;
+
+
+                // PRUEBA DE CIRCULO SIN SENTIDO    
+                 .glyphicon{
+                     font-size: 2rem;
+                //     height: 2rem;
+                //     width: 2rem;
+                //     border-radius:50%;
+                //     border:2px solid #fff;
+                //     padding-bottom: px;
+                 }
+                
+
+            }
+        }
+
+        
+    }
+
 }
