menu mobile revisado

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,13 +15,13 @@
                     </li>
                     <div class="menu">
                         <li>
-                            <a routerLinkActive="active" routerLink="/home">Home <span class="glyphicon glyphicon-home pull-right"></span></a>
+                            <a routerLinkActive="active" routerLink="/home">Home <i class="glyphicon glyphicon-home pull-right"></i></a>
                         </li>
                         <li>
-                            <a routerLinkActive="active" routerLink="/prueba" >Prueba<span class="glyphicon glyphicon-heart pull-right"></span></a>
+                            <a routerLinkActive="active" routerLink="/prueba" >Prueba<i class="glyphicon glyphicon-heart pull-right"></i></a>
                         </li>                        
                         <li>
-                            <a href="#">Log Out<span class="glyphicon glyphicon-log-out pull-right"></span></a>
+                            <a href="#">Log Out<i class="glyphicon glyphicon-log-out pull-right"></i></a>
                         </li>
                     </div>
                     
