--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -99,6 +99,7 @@
     position: absolute;
     bottom: 0;
     display: none;
+    width: 100%;
 
     .navbar-inverse{
         background-color: transparent;
@@ -108,7 +109,7 @@
     #bottomNav{
         background:rgba(49, 70, 91, 0.7);        
 
-        .col-xs-4{
+        div{
             border-left: 1px solid rgba(64, 89, 114, 0.7);;
             padding: 0;
             @include flexbox();
@@ -117,16 +118,19 @@
         a{
             width: 100%;
             height: 100%;
-            padding-top: 8px;
-            padding-bottom: 4px;
+            padding-top: 6px;
+            padding-bottom: 6px;
             border-bottom: 4px solid rgb(110, 125, 140);
             color:#fff;
+            @include flexbox();
+            @include justify-content(center);
+            @include align-items(center);
             &.active{                
                 color:#f3a117;
                 border-color: $orange;
  
-                 .glyphicon{
-                     font-size: 2rem;
+                 i{
+                     font-size: 1.5rem;
                  }            
             }
 
