--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -119,7 +119,7 @@
             height: 100%;
             padding-top: 8px;
             padding-bottom: 4px;
-            border-bottom: 4px solid $greyMenu;
+            border-bottom: 4px solid $greyBorder;
             color:#fff;
             &.active{                
                 color:$orange;
@@ -131,7 +131,7 @@
             }
 
             &:hover{                
-                border-color: rgb(49, 70, 91);           
+                border-color: $greyBorderBottom;           
             }
         }
     }
