--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,5 +1,6 @@
 //Colors
 $orange : #f3a117;
 $greyMenu: rgba(49, 70, 91, 0.7);
-$greyBorder: rgba(64, 89, 114, 0.7)
+$greyBorder: rgba(64, 89, 114, 0.7);
+$greyBorderBottom: rgb(49, 70, 91);
 
