--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,6 +1,5 @@
 //Colors
-$orange : #f3a117;
-$greyMenu: rgba(49, 70, 91, 0.7);
-$greyBorder: rgba(64, 89, 114, 0.7);
-$greyBorderBottom: rgb(49, 70, 91);
-
+$primaryOrange : #f3a117;
+$primaryGrey: rgba(49, 70, 91, 0.7);
+$secondaryGrey: rgba(64, 89, 114, 0.7);
+$thirdGrey: rgb(49, 70, 91);
