--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -7,7 +7,7 @@
 
 .side-bar 
 {
-    background:rgba(49, 70, 91, 0.7);
+    background: $primaryGrey;
     position:absolute;
     height:100%;
     width:200px;
@@ -53,7 +53,7 @@
 
             &.active{
                 padding-left:17px;
-                background: $orange;
+                background: $primaryOrange;
                 border-left:3px solid #ECECEA;
 
                 &:before{
@@ -64,7 +64,7 @@
                     border-top: 20px solid transparent;
                      border-bottom: 20px solid transparent;
                      
-                     border-left: 7px solid #D9853B;
+                     border-left: 7px solid $primaryOrange;
                      margin-top: -10px;
                      margin-left: 180px;
                 }
@@ -107,10 +107,10 @@
     }
 
     #bottomNav{
-        background:rgba(49, 70, 91, 0.7);        
+        background:$primaryGrey;        
 
         div{
-            border-left: 1px solid rgba(64, 89, 114, 0.7);;
+            border-left: 1px solid $secondaryGrey;
             padding: 0;
             @include flexbox();
         }
@@ -120,14 +120,14 @@
             height: 100%;
             padding-top: 6px;
             padding-bottom: 6px;
-            border-bottom: 4px solid rgb(110, 125, 140);
+            border-bottom: 4px solid $secondaryGrey;
             color:#fff;
             @include flexbox();
             @include justify-content(center);
             @include align-items(center);
             &.active{                
-                color:#f3a117;
-                border-color: $orange;
+                color:$primaryOrange;
+                border-color: $primaryOrange;
  
                  i{
                      font-size: 1.5rem;
@@ -135,7 +135,7 @@
             }
 
             &:hover{                
-                border-color: rgb(49, 70, 91);           
+                border-color: $thirdGrey;           
             }
         }
     }
