--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="wrapper" id="menuDesktop" [ngClass]="statusMenu ? 'active' : ''">
+		<div class="wrapper" id="menuDesktop" [ngClass]="statusMenu ? '' : 'active'">
     	    <div class="side-bar">
                 <ul>
                     <li class="menu-head">
@@ -13,8 +13,11 @@
                             <a routerLinkActive="active" routerLink="/home">Home <i class="oi oi-home float-right"></i></a>
                         </li>
                         <li>
-                            <a routerLinkActive="active" routerLink="/prueba" >Prueba<i class="oi oi-cog float-right"></i></a>
-                        </li>                        
+                            <a routerLinkActive="active" routerLink="/prueba" >Try<i class="oi oi-pie-chart float-right"></i></a>
+                        </li>                    
+                        <li>
+                            <a routerLinkActive="active" routerLink="/config" >Configuration<i class="oi oi-cog float-right"></i></a>
+                        </li>                   
                         <li>
                             <a href="#">Log Out<i class="oi oi-power-standby float-right"></i></a>
                         </li>
@@ -32,10 +35,15 @@
             <div class="col navbar-inverse navbar-fixed-bottom">
                 <div class="row" id="bottomNav">
                   <div class="col text-center"><a routerLinkActive="active" routerLink="/home"><i class="oi oi-home"></i></a></div>
-                  <div class="col text-center"><a routerLinkActive="active" routerLink="/prueba"><i class="oi oi-cog"></i></a></div>
+                  <div class="col text-center"><a routerLinkActive="active" routerLink="/prueba"><i class="oi oi-pie-chart"></i></a></div>
+                  <div class="col text-center plusbutton"><a routerLinkActive="active" routerLink="/add" id="plusbutton"><i class="oi oi-plus"></i></a></div>
+                  <div class="col text-center"><a routerLinkActive="active" routerLink="/config"><i class="oi oi-cog"></i></a></div>
                   <div class="col text-center"><a href="#"><i class="oi oi-power-standby"></i></a></div>
                 </div>
             </div>
         </div>
-	</div>
+    </div>
+    <div id="floatAdd">
+        <a  routerLink="/add"> <i class="oi oi-plus"></i></a>
+    </div>
 </div>
