--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,5 +1,5 @@
 //Colors
 $primaryOrange : #f3a117;
-$primaryGrey: rgba(49, 70, 91, 0.7);
+$primaryGrey: rgb(110, 125, 140);
 $secondaryGrey: rgba(64, 89, 114, 0.7);
 $thirdGrey: rgb(49, 70, 91);
