--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -19,6 +19,9 @@
     background-image: url("/assets/fondologin.jpg");
     background-repeat: no-repeat, repeat;
     background-size: cover;
+    position: absolute;
+    width: 100%;   
+    height: 100%;
 }
 
 input {
