--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -8,7 +8,7 @@
 .side-bar 
 {
     background: $primaryGrey;
-    position:absolute;
+    position:fixed;
     height:100%;
     width:200px;
     color:#fff;
@@ -96,18 +96,22 @@
 }
 
 #menuMobile{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     display: none;
     width: 100%;
+    height: 40px;
+    z-index: 2;
 
     .navbar-inverse{
         background-color: transparent;
         border-color: transparent;
+        height: 100%;
     }
 
     #bottomNav{
-        background:$primaryGrey;        
+        background:$primaryGrey;    
+        height: 100%;    
 
         div{
             border-left: 1px solid $secondaryGrey;
@@ -163,7 +167,7 @@
 }
 
 #floatAdd{
-    position: absolute;
+    position: fixed;
     bottom: 35px;
     right: 70px;
     height: 50px;
@@ -173,6 +177,7 @@
     @include flexbox();
     @include justify-content(center);
     @include align-items(center);
+    z-index: 3;
 
     a{
         color: #fff;    
