desarrollo del apartado config

--- a/src/app/menu/home/home.component.html
+++ b/src/app/menu/home/home.component.html
@@ -1,20 +1,12 @@
 <div class="row" style="margin-left: 0px; margin-right: 0px;">
-        <app-menu></app-menu>    
-        
-    
+    <app-menu></app-menu>
     <div>
-        Soy el home
-        porque no vas?
-        
+        Soy el home porque no vas?
         <p>blabla bla</p>
-        
         <p>blabla bla</p>
-        
         <p>blabla bla</p>
         <p>blabla bla</p>
         <p>blabla bla</p>
         <p>blabla bla</p>
     </div>
-    
-    
 </div>
