--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,9 +4,7 @@
     	    <div class="side-bar">
                 <ul>
                     <li class="menu-head">
-                        GastosAPP <a class="push_menu" (click)="toggleMenu()">
-                                <i class="oi oi-menu float-right"></i>
-                        </a>
+                        GastosAPP <a class="push_menu" (click)="toggleMenu()"><i class="oi oi-menu float-right"></i></a>
                     </li>
                     <div class="menu">
                         <li>
@@ -21,8 +19,7 @@
                         <li>
                             <a href="#">Log Out<i class="oi oi-power-standby float-right"></i></a>
                         </li>
-                    </div>
-                    
+                    </div>                    
                 </ul>
     	    </div>   
             <div class="content">
