--- a/src/app/menu/config/config.component.scss
+++ b/src/app/menu/config/config.component.scss
@@ -8,17 +8,36 @@ main{
     margin-left: -30px;
     font-size: 12px;
 
-        #userAvatar{        
+    .addBtn{
+        width: 50px;
+        height: 50px;
+        background-color: white;
+        border-radius: 50%;
+
+        &:hover{
+            background-color: $detailsGreen;
             
-            img{
-                height: auto;
-                width: 30%;
+            i{
+                color: white;
+            }
+        }
+
+        i{
+            color: $detailsGreen;
+        }
+    }
+
+    #userAvatar{        
+            
+        img{
+            height: auto;
+            width: 30%;
             }
         }
 
     #cuentasUser{     
 
-        .btn{
+        .modalBtn{
             color: black;           
             background: transparent;
         }
@@ -27,24 +46,39 @@ main{
             #name{
                 margin-bottom: 7px;
             }
-            .btn{
+            .btn{                
                 float: right;
             }
         }
 
         #AccountsList{                       
             padding: 5px;
-            width: 75px;
             justify-content: center;
+            @include flexbox();
+            
+            div{
+                margin-right: 5px;
+            }
 
+            .btn{
+                padding: 0;
+            }
             p{
                 word-wrap: break-word;
                 text-align: center;
             }
             #AccImg{                
-                max-width: 50px;
-                max-height: 50px;
+                width: 50px;
+                height: 50px;
             }
         }
+    }
+
+    #categoriasUser{
+
+        #categoriesList{
+            padding: 6px;
+        }
+        
     }
 }
