--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -4,3 +4,4 @@ $primaryGrey: rgb(110, 125, 140);
 $secondaryGrey: rgba(64, 89, 114, 0.7);
 $thirdGrey: rgb(49, 70, 91);
 $detailsGrey: #e9e6e6;
+$detailsGreen: #50b648;
