--- a/src/app/menu/config/config.component.scss
+++ b/src/app/menu/config/config.component.scss
@@ -8,6 +8,11 @@ main{
     margin-left: -30px;
     font-size: 12px;
 
+    .modalBtn{
+        color: black;           
+        background: transparent;
+    }
+
     .addBtn{
         width: 50px;
         height: 50px;
@@ -37,10 +42,7 @@ main{
 
     #cuentasUser{     
 
-        .modalBtn{
-            color: black;           
-            background: transparent;
-        }
+        
 
         #newAccount{              
             #name{
@@ -78,6 +80,22 @@ main{
 
         #categoriesList{
             padding: 6px;
+        }
+
+        #addCategory{            
+            margin-bottom: 7px;            
+        }
+
+        #newCategory{
+            #name{
+                margin-bottom: 7px;
+            }
+            #father{
+                margin-bottom: 7px;
+            }
+            .btn{                
+                float: right;
+            }
         }
         
     }
