--- a/src/app/menu/data/data.component.html
+++ b/src/app/menu/data/data.component.html
@@ -1,6 +1,8 @@
 <div class="row" style="margin-left: 0px; margin-right: 0px;">
   <app-menu></app-menu>
-  <p>
-    add data!
-  </p>
+  <div class="boxContainer shadow">
+    <form action="">
+      <input autofocus type="name" id="dataName" class="form-control" [(ngModel)]="dataName" name="dataName" placeholder="Descripción gasto" required>
+    </form>
+  </div>
 </div>
